2007-03-21 Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graphics.c (boundary): The change of 2007-02-25 overlooked the
	2D plots having palettes that also required setup_tics(COLOR_AXIS,).
	Bug #1684789

2007-03-21  Ethan Merritt  <merritt@u.washington.edu>

	These are mostly trivial patches that went into CVS soon after the
	code freeze for 4.2

	* src/graphics.c (plot_impulses plot_points plot_dots) 
	src/plot2d.c (get_data store_2dpoint store_label):
	Allows a third column of data containing color info to be used in
	2D plots (points/dots/impulses/labels),

	* term/gd.trm (PNG_image) term/pdf.trm (PDF_image)
	term/post.trm (PS_image) 
	src/wxterminal/gp_cairo.c (gp_cairo_draw_fillbox gp_cairo_draw_image):
	Teach gd pdf post and wxt terminals to clip images using the
	bounding box info passed in corners[2] and corners[3] via term->image().

	* term/pdf.trm (PDF_SetFont): Trap errors from PDF font selection, 
	making it non-fatal.

	* src/axis.c (get_position_default):  
	Reduce the problem of trailing comma after 2D offset.

	* src/graph3d.c (plot3d_impulses): splot with impulses lt rgb variable.

	* src/graphics.c (do_key_sample):
	If the length of a boxplot sample in the key is set to zero,  do not
	draw it at all.  Without this patch, a spurious vertical line appears
	in the key if the fillstyle includes a border.

	* term/svg.trm (SVG_PathLimit SVG_MoveForced): 
	Avoid ridiculously long paths by limiting total path length to 512.

	* src/util3d.c (draw3d_line_unconditional):  Clip line segment.
	Fixes segfault when line segment endpoint went negative in bitmap.c
	Bug #1649887

	* src/graph3d.c (do_3dplot draw_3d_graphbox):
	Add special-case tests to insure that the plot border is drawn either 
	back or front (in front of the grid) when splot_map is set.
	Bug #1655001

	* term/gd.trm (PNG_vector):  Grid lines (linetype 0) were always
	treated as alternating black/white/black/white.  Change this to